# toado

./: Cargo.toml  LICENSE.txt  README.md  build.rs  config.toml
.github/workflows/: main.yml
src/: commands.rs  config.rs  flags.rs  formatting.rs  lib.rs  main.rs  queries.rs
src/commands/: assignment.rs  projects.rs  tasks.rs
src/formatting/: projects.rs  table.rs  tasks.rs
src/queries/: projects.rs  tasks.rs
