[package]
name = "toado"
version = "0.4.0"
edition = "2021"
description = "A simple interactive task and project manager for the command line"
license = "MIT"
repository = "https://github.com/maxcaplan/toado"
readme = "README.md"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
regex = "1.10.4"

